<resources>
    <string name="app_name">Memory Game</string>
    <string name="action_settings">Settings</string>
    <string name="Start">Start</string>
    <string name="Help">Pomoc</string>
    <string name="Instruction">Memory Game to typowa gra pamięciowa w której gracz ma zadanie znaleźć pary takich samych kart.
        Rozgrywka kończy się wtedy gdy uda się odnaleźć wszystkie z nich.\n \n
        Polityka Prywatności: http://bzisz.cba.pl \n
        Muzyka: https://www.bensound.com \n
        Obrazy: https://www.kisspng.com/</string>
    <string name="Back">Powrót</string>
    <string name="Author">Grę stworzył:\n Bartłomiej Żmuda</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="Restart">Restart</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="Time">00:00.000</string>
    <string name="SummaryTime">Twój czas to: </string>
    <string name="Count">88</string>
    <string name="Summary">Ilość kliknięć: </string>
    <string name="Congratulation">Gratulacje!</string>
    <string name="Level">Trudność</string>
    <string name="Category">Kategoria</string>
    <string name="chooseLevel">Średnia</string>
    <string name="chooseCategory">Budynki</string>
    <string name="right">"\u21E8"</string>
    <string name="left">"\u21E6"</string>
    <string name="categoryBuildings">Budynki</string>
    <string name="categoryVehileces">Pojazdy</string>
    <string name="categoryAnimals">Zwierzęta</string>
    <string name="levelMedium">Średnia</string>
    <string name="levelHard">Trudna</string>
    <string name="levelEasy">Łatwa</string>
    <string name="title_activity_menu">MenuActivity</string>
</resources>

