<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.bartlomiejzmuda.Memory_Game.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="319dp"
        android:layout_height="143dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo200" />

    <TextView
        android:id="@+id/textViewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="click"
        android:text="@string/Start"
        android:textSize="30sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="click"
        android:text="@string/Help"
        android:textSize="25sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStart" />

    <TextView
        android:id="@+id/textViewLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Level"
        android:textSize="25sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHelp" />

    <TextView
        android:id="@+id/textViewChooseLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/levelMedium"
        android:textSize="20sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/textViewLevel"
        app:layout_constraintStart_toStartOf="@+id/textViewLevel"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevel" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Category"
        android:textSize="25sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseLevel" />

    <TextView
        android:id="@+id/textViewChooseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/categoryBuildings"
        android:textSize="20sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/textViewCategory"
        app:layout_constraintStart_toStartOf="@+id/textViewCategory"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />

    <TextView
        android:id="@+id/textViewLeftLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="click"
        android:text="@string/left"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewChooseLevel"
        app:layout_constraintEnd_toStartOf="@+id/textViewHelp"
        app:layout_constraintTop_toTopOf="@+id/textViewChooseLevel" />

    <TextView
        android:id="@+id/textViewRightLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:onClick="click"
        android:text="@string/right"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewChooseLevel"
        app:layout_constraintStart_toEndOf="@+id/textViewHelp"
        app:layout_constraintTop_toTopOf="@+id/textViewChooseLevel" />

    <TextView
        android:id="@+id/textViewLeftCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="click"
        android:text="@string/left"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewChooseCategory"
        app:layout_constraintEnd_toStartOf="@+id/textViewHelp"
        app:layout_constraintTop_toTopOf="@+id/textViewChooseCategory" />

    <TextView
        android:id="@+id/textViewRightCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:onClick="click"
        android:text="@string/right"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewChooseCategory"
        app:layout_constraintStart_toEndOf="@+id/textViewHelp"
        app:layout_constraintTop_toTopOf="@+id/textViewChooseCategory" />

    <ImageView
        android:id="@+id/imageViewSilent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
        android:onClick="click"/>


</android.support.constraint.ConstraintLayout>